--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "dependencies": {
-    "bootstrap-icons": "^1.11.3"
+    "@angular/material": "^19.1.3",
+    "bootstrap-icons": "^1.11.3",
+    "material-icons": "^1.13.13"
+  },
+  "devDependencies": {
+    "@angular/cli": "^15.2.11"
   }
 }
